# Win11-AIO-Troubleshooter

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: admin.rs  app_history.rs  app_insights.rs  bsod_analyzer.rs  cli_tools.rs  crash_logs.rs  disk_analyzer.rs  driver_manager.rs  event_logs.rs  export.rs  favorites.rs  firewall.rs  hardware_health.rs  health_score.rs  installed_programs.rs  mod.rs  network_diagnostics.rs  processes.rs  restore_points.rs  services.rs  startup_manager.rs  system_info.rs  task_scheduler.rs  users.rs  windows_update.rs
src-tauri/src/utils/: powershell.rs
src/components/: AppHistory.tsx  AppInsights.tsx  BsodAnalyzer.tsx  ConfirmDialog.tsx  Dashboard.tsx  DiskAnalyzer.tsx  DriverManager.tsx  EventLogs.tsx  EventViewer.tsx  ExportButton.tsx  FeatureGuide.tsx  FirewallViewer.tsx  HardwareHealth.tsx  InstalledPrograms.tsx  Layout.tsx  NetworkDiagnostics.tsx  ProcessManager.tsx  QuickTools.tsx  RestorePoints.tsx  ServiceInsights.tsx  ServicesManager.tsx  SettingsPage.tsx  Sidebar.tsx  StartupManager.tsx  TaskScheduler.tsx  TitleBar.tsx  ToastProvider.tsx  UsersPage.tsx  WindowsUpdate.tsx
src/types/: index.ts
src/utils/: updateChecker.ts
