[package]
name = "aio-troubleshooter"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"

[lib]
name = "aio_troubleshooter_lib"
crate-type = ["lib", "cdylib", "staticlib"]
